--- a/_includes/main.html
+++ b/_includes/main.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="panel__right">
-                  {% include blocks/document-comments.html %}
+                  {% include blocks/item-comments.html %}
                 </div>
 
               </div><!-- /.document__content -->
