--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,22 +30,9 @@
             <h2>Open UX improvments <span class="id">3452</span></h2>
 
             <div class="actions">
-              <i class="process process--toggle"></i>
-              <i class="media media--toggle"></i>
+              <i class="process process--toggle">ण</i>
+              <i class="media media--toggle">स</i>
             </div>
-
-            <!--
-              <div class="actions">
-                <i class="more"><span class="counter"></span></i>
-                <i class="delete"></i>
-                <i class="mail"><span class="counter"></span></i>
-                <i class="print"></i>
-                <i class="hourglass"></i>
-                <i class="bookmark"></i>
-                <i class="process process--toggle"></i>
-                <i class="media media--toggle"></i>
-              </div>
-            -->
 
             <div class="status">
               <span>On schedule</span>
@@ -66,8 +53,8 @@
             <!-- /.document__info-data -->
           </div>
 
-          <div class="panel__right">
-            {% include blocks/document-comments.html %}
+          <div class="item-comments">
+            {% include blocks/item-comments.html %}
           </div>
 
         </div>
