--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -12,6 +12,7 @@
 @import "blocks/app-navigator.css";
 @import "blocks/user-menu.css";
 @import "blocks/app-header.css";
+@import "blocks/item-comments.css";
 @import "blocks/applicable-slider.css";
 
 // Components
