--- a/_layouts/old-pmx.html
+++ b/_layouts/old-pmx.html
@@ -3,7 +3,6 @@
   <head>
     <link rel="stylesheet" href="{{ site.baseurl }}/sass/old-pmx.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/sass/old-pmx-temp.css">
-
     {% include head.html %}
   </head>
 
@@ -11,4 +10,5 @@
     {{ content }}
   </body>
 
+  {% include foot.html %}
 </html>
