--- a/sass/app.scss
+++ b/sass/app.scss
@@ -19,7 +19,7 @@ body {
 }
 body.page-Components,
 body.page-Itembox,
-body.page-Colorpicker,
+body.page-Tag-picker,
 body.page-Popups {
   background-color: #FFF;
   padding: 50px;
