--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,34 +1,34 @@
+<!-- JQUERY -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/jquery-ui.min.js"></script>
 
 <!-- CDN FOR TABS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
 
-<!-- END -->
-
 <!-- ALL FOR STICKY -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.stickytableheaders.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.sticky.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
-<!-- END -->
-
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/app.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/jquery-ui.min.js"></script>
 
 <!-- PLUGINS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
 
 <!-- COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
-
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSimpleSelect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
 
 <!-- OLD COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
+
+<!-- APP -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/app.js"></script>
