--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -26,6 +26,8 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSimpleSelect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
 
 <!-- OLD COMPONENTS -->
