--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="app-header-inner__right">
-    <div class="app-header-inner__item JS_toggle-semseach-1">
+    <div class="app-header-inner__item JS_toggle-semsearch-1">
       <a href="#">ञ</a>
       {% include popups/semsearch.html %}
     </div>
@@ -18,61 +18,4 @@
   </div>
 </div>
 
-<div class="breadcrumbs">
-  <div class="breadcrumbs__item">
-    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Bril</span> <span class="breadcrumbs__label">Jaarplan 2016 - Staf</span></div>
-    <div class="breadcrumbs__selector">
-      <input type="input" placeholder="filter">
-      <ul>
-        <li>Dashboard</li>
-        <li>Finace &amp; Admin</li>
-        <li>Marketing &amp; Design</li>
-        <li>pmx Engineering</li>
-        <li>Professional Services</li>
-        <li>Wiki</li>
-      </ul>
-    </div>
-  </div>
-  <div class="breadcrumbs__item">
-    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Doelstelling</span> <span class="breadcrumbs__label">De aanbevelingen van Audit Vlaanderen m.b.t. organisatiebeheersing uitvoeren</span></div>
-    <div class="breadcrumbs__selector">
-      <input type="input" placeholder="filter">
-      <ul>
-        <li>Dashboard</li>
-        <li>Finace &amp; Admin</li>
-        <li>Marketing &amp; Design</li>
-        <li>pmx Engineering</li>
-        <li>Professional Services</li>
-        <li>Wiki</li>
-      </ul>
-    </div>
-  </div>
-  <div class="breadcrumbs__item">
-    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Project</span> <span class="breadcrumbs__label">D06.0/P03 - Een monitoringsysteem uitbouwen voor de opvolging en bijsturing van</span></div>
-    <div class="breadcrumbs__selector">
-      <input type="input" placeholder="filter">
-      <ul>
-        <li>Dashboard</li>
-        <li>Finace &amp; Admin</li>
-        <li>Marketing &amp; Design</li>
-        <li>pmx Engineering</li>
-        <li>Professional Services</li>
-        <li>Wiki</li>
-      </ul>
-    </div>
-  </div>
-  <div class="breadcrumbs__item">
-    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Mijlpaal</span> <span class="breadcrumbs__label">M01 - Processen varend erfgoed</span></div>
-    <div class="breadcrumbs__selector">
-      <input type="input" placeholder="filter">
-      <ul>
-        <li>Dashboard</li>
-        <li>Finace &amp; Admin</li>
-        <li>Marketing &amp; Design</li>
-        <li>pmx Engineering</li>
-        <li>Professional Services</li>
-        <li>Wiki</li>
-      </ul>
-    </div>
-  </div>
-</div>
+{% include blocks/breadcrumbs.html %}
