--- a/_includes/blocks/item-comments.html
+++ b/_includes/blocks/item-comments.html
@@ -1,8 +1,10 @@
-<div class="item-comments__add-comment">
-  <input class="item-comments__add-commentInput" placeholder="use @username to notify">
-  <div class="item-comments__add-commentActions">
-    <i class="icon__paper-clip"></i>
-    <i class="icon__arrow-right"></i>
+
+
+<div class="comment-addNew">
+  <input class="comment-addNew__input" placeholder="use @username to notify">
+  <div class="comment-addNew__actions">
+    <i>ओ</i>
+    <i>य</i>
   </div>
 </div>
 
@@ -19,27 +21,48 @@
   <div class="tabs-panels">
     <div class="tabs-panels__panel" tabindex="1">
 
-        <div class="item-comments__comment item-comments__comment--comment">
-          <div class="item-comments__commentAuthor">Nick De Jaeger</div>
-          <div class="item-comments__commentMessage">
-            <p><span class="item-comments__commentMessageTagged">@KonstantinKharlov</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-          <div class="item-comments__commentFooter">posted at <span class="item-comments__commentPublishTime">10:21</span> on <span class="item-comments__commentPublishDate">12/06/2017</span></div>
+        <div class="comment-posted">
+          <header class="comment-posted__header">
+            <div class="comment-posted__author">Nick De Jaeger</div>
+          </header>
+          <article class="comment-posted__message">
+            <p><span class="comment-posted__tagged">@KonstantinKharlov</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </article>
+          <footer class="comment-posted__footer">
+            posted at <span class="comment-posted__post-time">10:21</span> on <span class="comment-posted__post-date">12/06/2017</span>
+          </footer>
         </div>
-        <div class="item-comments__comment item-comments__comment--attachment item-comments__comment--self">
+
+
+        <div class="comment-posted comment-posted--attachment comment-posted--self">
+          <header class="comment-posted__header">
+            <div class="comment-posted__author">Jetro Wils</div>
+          </header>
+          <article class="comment-posted__message">
+            <p><span class="comment-posted__tagged">@Nick De Jaeger</span> Officia deserunt mollit anim id est, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="comment-posted__attachment">
+              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/files.jpg);"></div>
+              <div class="comment-posted__attachment-caption"><p>Excepteur sint occaecat cupidatat non proident.</p></div>
+            </div>
+            <div class="comment-posted__attachment">
+              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/roadwork.jpg);"></div>
+              <div class="comment-posted__attachment-caption"><p>Excepteur sint occaecat cupidatat non proident.</p></div>
+            </div>
+          </article>
+          <footer class="comment-posted__footer">
+            posted at <span class="comment-posted__post-time">10:21</span> on <span class="comment-posted__post-date">12/06/2017</span>
+          </footer>
+        </div>
+
+
+
+
+
+        <div class="item-comments__comment item-comments__comment--self">
           <div class="item-comments__commentAuthor">Jetro Wils</div>
           <div class="item-comments__commentMessage">
-            <div class="item-comments__commentAttachmentCover" style="background-image:url(assets/images/files.jpg);"></div>
-            <div class="item-comments__commentAttachmentCaption">Excepteur sint occaecat cupidatat non proident.</div>
-          </div>
-          <div class="item-comments__commentFooter">uploaded at <span class="item-comments__commentPublishTime">7:11</span> on <span class="item-comments__commentPublishDate">11/06/2017</span></div>
-        </div>
-        <div class="item-comments__comment item-comments__comment--comment item-comments__comment--self">
-          <div class="item-comments__commentAuthor">Jetro Wils</div>
-          <div class="item-comments__commentMessage">
-            <p><span class="item-comments__commentMessageTagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) 👍👍👍</p>
+            <p><span class="item-comments__commentMessageTagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
           </div>
           <div class="item-comments__commentFooter">posted at <span class="item-comments__commentPublishTime">13:53</span> on <span class="item-comments__commentPublishDate">07/06/2017</span></div>
         </div>
@@ -51,7 +74,7 @@
           </div>
           <div class="item-comments__commentFooter">uploaded at <span class="item-comments__commentPublishTime">9:01</span> on <span class="item-comments__commentPublishDate">10/06/2017</span></div>
         </div>
-        <div class="item-comments__comment item-comments__comment--comment">
+        <div class="item-comments__comment">
           <div class="item-comments__commentAuthor">Nick De Jaeger</div>
           <div class="item-comments__commentMessage">
             <p><span class="item-comments__commentMessageTagged">@KonstantinKharlov</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -100,7 +123,7 @@
           </div>
           <div class="item-comments__commentFooter">uploaded at <span class="item-comments__commentPublishTime">7:11</span> on <span class="item-comments__commentPublishDate">11/06/2017</span></div>
         </div>
-        <div class="item-comments__comment item-comments__comment--comment item-comments__comment--self">
+        <div class="item-comments__comment item-comments__comment--self">
           <div class="item-comments__commentAuthor">Jetro Wils</div>
           <div class="item-comments__commentMessage">
             <p><span class="item-comments__commentMessageTagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) 👍👍👍</p>
