--- a/sass/blocks/item-comments.scss
+++ b/sass/blocks/item-comments.scss
@@ -19,48 +19,220 @@
   }
 }
 
+
+
+
+
+
+
+
+
+.comment-addNew {
+  position: relative;
+  background-color: #FFF;
+  border-bottom: 1px dashed #CCC;
+  font-size: 0;
+
+  &__input {
+    width: 100%;
+    padding: 12px 80px 12px 12px;
+    height: 48px;
+    font-size: 16px;
+    transition: all .3s ease-in-out;
+  }
+
+  &__actions {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 80px;
+    text-align: right;
+    font-size: 16px;
+
+    i {
+      display: inline-block;
+      width: 40px;
+      height: 100%;
+      padding: 13px 0;
+      color: #bf920b;
+      cursor: pointer;
+      text-align: center;
+      font-size: 16px;
+      float: left;
+    }
+  }
+}
+
+.comment-posted {
+  position: relative;
+  margin: 10px 0;
+
+  &:hover {
+    .comment-posted__footer {
+      opacity: 1;
+      top: 0;
+    }
+  }
+
+  &__header {
+
+  }
+
+  &__author {
+    font-size: 14px;
+    font-weight: 600;
+    color: #000;
+  }
+
+  &__message {
+    position: relative;
+    z-index: 1;
+    border-radius: 10px;
+    border-top-left-radius: 0;
+    padding: 8px;
+    background-color: #F1F1F1;
+
+    p {
+      margin: 12px 0;
+      color: #000;
+      font-size: 16px;
+      line-height: 20px;
+
+      &:first-child {
+        margin-top: 0;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  &__tagged {
+    font-style: italic;
+    color: #555;
+    cursor: pointer;
+    transition: color .3s ease-in-out;
+
+    &:hover {
+      color: #000;
+    }
+  }
+
+  &__attachment {
+    position: relative;
+    min-height: 100px;
+    overflow: hidden;
+    cursor: pointer;
+    border-radius: 0 10px 10px 10px;
+    margin: -8px;
+    box-shadow: 3px -5px 10px -5px rgba(0,0,0,.3);
+
+    &::after {
+      content: '';
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.65) 100%);
+      border-radius: 0 10px 10px 10px;
+      transition: all .3s ease-in-out;
+
+    }
+
+    &:hover {
+      &::after  {
+        opacity: 0;
+      }
+
+      .comment-posted__attachment-cover {
+        transform: scale(1);
+      }
+
+      .comment-posted__attachment-caption {
+        opacity: 0;
+      }
+    }
+
+    &-cover {
+      position: absolute;
+      z-index: 0;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-position: center;
+      background-size: 100%;
+      background-repeat: no-repeat;
+      cursor: pointer;
+      transition: all 5s ease-in-out;
+
+      transform: scale(1.2);
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+    }
+
+    &-caption {
+      position: absolute;
+      z-index: 2;
+      bottom: 0;
+      transition: all .5s ease-in-out;
+      max-height: 60px;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+
+      p {
+        color: #FFF;
+        font-size: 14px;
+        line-height: 18px;
+        margin: 6px 8px;
+      }
+    }
+  }
+
+  &__footer {
+    position: relative;
+    z-index: 0;
+    top: -16px;
+    margin: 0 12px;
+    font-size: 10px;
+    color: #616161;
+    text-align: right;
+    opacity: 0;
+    transition: all .5s ease-in-out;
+  }
+
+  &__post-time {
+    color: #393939;
+    font-weight: 700;
+    font-size: 9px;
+  }
+
+  &__post-date {
+    color: #393939;
+    font-weight: 700;
+    font-size: 9px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
 .item-comments {
   float: right;
   width: 24%;
   margin: 0 0 0 1%;
   background-color: #FFF;
-
-  &__add-comment {
-    position: relative;
-    background-color: #FFF;
-    border-bottom: 1px dashed #CCC;
-    font-size: 0;
-
-    &Input {
-      width: 100%;
-      padding: 12px 80px 12px 12px;
-      height: 48px;
-      font-size: 16px;
-      transition: all .3s ease-in-out;
-
-      &::-webkit-input-placeholder {
-        font-style: italic;
-        opacity: .7;
-      }
-    }
-
-    &Actions {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      width: 80px;
-      text-align: right;
-      font-size: 16px;
-      padding: 0 4px;
-
-      i {
-        display: inline-block;
-        padding: 13px 6px 13px 6px;
-        color: #bf920b;
-        cursor: pointer;
-      }
-    }
-  }
 
   &__comment {
     margin: 10px 0;
