--- a/_includes/blocks/item-comments.html
+++ b/_includes/blocks/item-comments.html
@@ -34,8 +34,7 @@
           </footer>
         </div>
 
-
-        <div class="comment-posted comment-posted--attachment comment-posted--self">
+        <div class="comment-posted comment-posted--self">
           <header class="comment-posted__header">
             <div class="comment-posted__author">Jetro Wils</div>
           </header>
@@ -55,80 +54,102 @@
           </footer>
         </div>
 
-
-
-
-
-        <div class="item-comments__comment item-comments__comment--self">
-          <div class="item-comments__commentAuthor">Jetro Wils</div>
-          <div class="item-comments__commentMessage">
-            <p><span class="item-comments__commentMessageTagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
-          </div>
-          <div class="item-comments__commentFooter">posted at <span class="item-comments__commentPublishTime">13:53</span> on <span class="item-comments__commentPublishDate">07/06/2017</span></div>
+        <div class="comment-posted comment-posted--self">
+          <header class="comment-posted__header">
+            <div class="comment-posted__author">Jetro Wils</div>
+          </header>
+          <article class="comment-posted__message">
+            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
+          </article>
+          <footer class="comment-posted__footer">
+            posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
+          </footer>
         </div>
-        <div class="item-comments__comment item-comments__comment--attachment">
-          <div class="item-comments__commentAuthor">Konstantin Kharlov</div>
-          <div class="item-comments__commentMessage">
-            <div class="item-comments__commentAttachmentCover" style="background-image:url(assets/images/roadwork.jpg);"></div>
-            <div class="item-comments__commentAttachmentCaption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
-          </div>
-          <div class="item-comments__commentFooter">uploaded at <span class="item-comments__commentPublishTime">9:01</span> on <span class="item-comments__commentPublishDate">10/06/2017</span></div>
+
+        <div class="comment-posted">
+          <header class="comment-posted__header">
+            <div class="comment-posted__author">Konstantin Kharlov</div>
+          </header>
+          <article class="comment-posted__message">
+            <div class="comment-posted__attachment">
+              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/roadwork.jpg);"></div>
+              <div class="comment-posted__attachment-caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
+            </div>
+          </article>
+          <footer class="comment-posted__footer">
+            uploaded at <span class="comment-posted__post-time">9:01</span> on <span class="comment-posted__post-time">10/06/2017</span>
+          </footer>
         </div>
-        <div class="item-comments__comment">
-          <div class="item-comments__commentAuthor">Nick De Jaeger</div>
-          <div class="item-comments__commentMessage">
-            <p><span class="item-comments__commentMessageTagged">@KonstantinKharlov</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+        <div class="comment-posted">
+          <header class="comment-posted__header">
+            <div class="comment-posted__author">Nick De Jaeger</div>
+          </header>
+          <article class="comment-posted__message">
+            <p><span class="comment-posted__tagged">@KonstantinKharlov</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-          <div class="item-comments__commentFooter">posted at <span class="item-comments__commentPublishTime">10:21</span> on <span class="item-comments__commentPublishDate">12/06/2017</span></div>
+          </article>
+          <footer class="comment-posted__footer">
+            posted at <span class="comment-posted__post-time">10:21</span> on <span class="comment-posted__post-time">12/06/2017</span>
+          </footer>
         </div>
-        <div class="item-comments__comment item-comments__comment--attachment item-comments__comment--self">
-          <div class="item-comments__commentAuthor">Jetro Wils</div>
-          <div class="item-comments__commentMessage">
-            <div class="item-comments__commentAttachmentCover" style="background-image:url(assets/images/files.jpg);"></div>
-            <div class="item-comments__commentAttachmentCaption">Excepteur sint occaecat cupidatat non proident.</div>
-          </div>
-          <div class="item-comments__commentFooter">uploaded at <span class="item-comments__commentPublishTime">7:11</span> on <span class="item-comments__commentPublishDate">11/06/2017</span></div>
+
+        <div class="comment-posted comment-posted--self">
+          <header class="comment-posted__header">
+            <div class="comment-posted__author">Jetro Wils</div>
+          </header>
+          <article class="comment-posted__message">
+            <div class="comment-posted__attachment">
+              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/files.jpg);"></div>
+              <div class="comment-posted__attachment-caption">Excepteur sint occaecat cupidatat non proident.</div>
+            </div>
+          </article>
+          <v class="comment-posted__footer">
+            uploaded at <span class="comment-posted__post-time">7:11</span> on <span class="comment-posted__post-time">11/06/2017</span>
+          </footer>
         </div>
-        <div class="item-comments__comment item-comments__comment--attachment">
-          <div class="item-comments__commentAuthor">Konstantin Kharlov</div>
-          <div class="item-comments__commentMessage">
-            <div class="item-comments__commentAttachmentCover" style="background-image:url(assets/images/roadwork.jpg);"></div>
-            <div class="item-comments__commentAttachmentCaption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
-          </div>
-          <div class="item-comments__commentFooter">uploaded at <span class="item-comments__commentPublishTime">9:01</span> on <span class="item-comments__commentPublishDate">10/06/2017</span></div>
+
+        <div class="comment-posted">
+          <header class="comment-posted__header">
+            <div class="comment-posted__author">Konstantin Kharlov</div>
+          </header>
+          <article class="comment-posted__message">
+            <div class="comment-posted__attachment">
+              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/roadwork.jpg);"></div>
+              <div class="comment-posted__attachment-caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
+            </div>
+          </article>
+          <footer class="comment-posted__footer">
+            uploaded at <span class="comment-posted__post-time">9:01</span> on <span class="comment-posted__post-time">10/06/2017</span>
+          </footer>
         </div>
-        <div class="item-comments__comment item-comments__comment--attachment item-comments__comment--self">
-          <div class="item-comments__commentAuthor">Jetro Wils</div>
-          <div class="item-comments__commentMessage">
-            <div class="item-comments__commentAttachmentCover" style="background-image:url(assets/images/files.jpg);"></div>
-            <div class="item-comments__commentAttachmentCaption">Excepteur sint occaecat cupidatat non proident.</div>
-          </div>
-          <div class="item-comments__commentFooter">uploaded at <span class="item-comments__commentPublishTime">7:11</span> on <span class="item-comments__commentPublishDate">11/06/2017</span></div>
+
+        <div class="comment-posted comment-posted--self">
+          <header class="comment-posted__header">
+            <div class="comment-posted__author">Jetro Wils</div>
+          </header>
+          <article class="comment-posted__message">
+            <div class="comment-posted__attachment">
+              <div class="comment-posted__attachment-cover" style="background-image:url(assets/images/files.jpg);"></div>
+              <div class="comment-posted__attachment-caption">Excepteur sint occaecat cupidatat non proident.</div>
+            </div>
+          </article>
+          <footer class="comment-posted__footer">
+            uploaded at <span class="comment-posted__post-time">7:11</span> on <span class="comment-posted__post-time">11/06/2017</span>
+          </footer>
         </div>
-        <div class="item-comments__comment item-comments__comment--attachment">
-          <div class="item-comments__commentAuthor">Konstantin Kharlov</div>
-          <div class="item-comments__commentMessage">
-            <div class="item-comments__commentAttachmentCover" style="background-image:url(assets/images/roadwork.jpg);"></div>
-            <div class="item-comments__commentAttachmentCaption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
-          </div>
-          <div class="item-comments__commentFooter">uploaded at <span class="item-comments__commentPublishTime">9:01</span> on <span class="item-comments__commentPublishDate">10/06/2017</span></div>
-        </div>
-        <div class="item-comments__comment item-comments__comment--attachment item-comments__comment--self">
-          <div class="item-comments__commentAuthor">Jetro Wils</div>
-          <div class="item-comments__commentMessage">
-            <div class="item-comments__commentAttachmentCover" style="background-image:url(assets/images/files.jpg);"></div>
-            <div class="item-comments__commentAttachmentCaption">Excepteur sint occaecat cupidatat non proident.</div>
-          </div>
-          <div class="item-comments__commentFooter">uploaded at <span class="item-comments__commentPublishTime">7:11</span> on <span class="item-comments__commentPublishDate">11/06/2017</span></div>
-        </div>
-        <div class="item-comments__comment item-comments__comment--self">
-          <div class="item-comments__commentAuthor">Jetro Wils</div>
-          <div class="item-comments__commentMessage">
-            <p><span class="item-comments__commentMessageTagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) 👍👍👍</p>
-          </div>
-          <div class="item-comments__commentFooter">posted at <span class="item-comments__commentPublishTime">13:53</span> on <span class="item-comments__commentPublishDate">07/06/2017</span></div>
+
+        <div class="comment-posted comment-posted--self">
+          <header class="comment-posted__header">
+            <div class="comment-posted__author">Jetro Wils</div>
+          </header>
+          <article class="comment-posted__message">
+            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) 👍👍👍</p>
+          </article>
+          <footer class="comment-posted__footer">
+            posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
+          </footer>
         </div>
 
     </div>
