--- a/sass/blocks/item-comments.scss
+++ b/sass/blocks/item-comments.scss
@@ -2,6 +2,11 @@
 ---
 
 .item-comments {
+  float: right;
+  width: 24%;
+  margin: 0 0 0 1%;
+  background-color: #FFF;
+
   .tabs  {
     &-nav {
       &__link {
@@ -18,14 +23,6 @@
     }
   }
 }
-
-
-
-
-
-
-
-
 
 .comment-addNew {
   position: relative;
@@ -110,7 +107,7 @@
 
   &__tagged {
     font-style: italic;
-    color: #555;
+    color: rgba(0, 0, 0, .7);
     cursor: pointer;
     transition: color .3s ease-in-out;
 
@@ -124,9 +121,8 @@
     min-height: 100px;
     overflow: hidden;
     cursor: pointer;
-    border-radius: 0 10px 10px 10px;
-    margin: -8px;
-    box-shadow: 3px -5px 10px -5px rgba(0,0,0,.3);
+    border-radius: 0;
+    margin: 8px -8px -8px -8px;
 
     &::after {
       content: '';
@@ -137,9 +133,16 @@
       right: 0;
       bottom: 0;
       background: linear-gradient(to bottom, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.65) 100%);
-      border-radius: 0 10px 10px 10px;
       transition: all .3s ease-in-out;
+    }
 
+    &:first-child {
+      margin-top: -8px;
+    }
+
+    &:last-child {
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
     }
 
     &:hover {
@@ -190,6 +193,14 @@
         font-size: 14px;
         line-height: 18px;
         margin: 6px 8px;
+
+        &:first-child {
+          margin-top: 6px;
+        }
+
+        &:last-child {
+          margin-bottom: 6px;
+        }
       }
     }
   }
@@ -217,168 +228,21 @@
     font-weight: 700;
     font-size: 9px;
   }
-}
 
-
-
-
-
-
-
-
-
-
-.item-comments {
-  float: right;
-  width: 24%;
-  margin: 0 0 0 1%;
-  background-color: #FFF;
-
-  &__comment {
-    margin: 10px 0;
-
-    &:hover {
-      .item-comments__commentFooter {
-        opacity: 1;
-        top: 0;
-      }
-    }
-
-    &Author {
-      font-size: 14px;
-      font-weight: 600;
-      color: #000;
-    }
-
-    &Message {
-      position: relative;
-      z-index: 1;
-      background-color: #F1F1F1;
-      color: #000;
-      padding: 8px;
-      font-size: 16px;
-      font-weight: 400;
-      border-radius: 10px;
-      border-top-left-radius: 0;
-
-      &Tagged {
-        font-style: italic;
-        opacity: .92;
-        cursor: pointer;
-        transition: opacity .3s ease-in-out;
-
-        &:hover {
-          opacity: 1;
-        }
-      }
-
-      p {
-        margin: 12px 0;
-        line-height: 20px;
-
-        &:first-child {
-          margin-top: 0;
-        }
-
-        &:last-child {
-          margin-bottom: 0;
-        }
-      }
-    }
-
-    &Footer {
-      position: relative;
-      font-size: 10px;
-      font-weight: 400;
-      color: #616161;
-      margin: 0 12px;
-      text-align: right;
-      opacity: 0;
-      transition: all .5s ease-in-out;
-      top: -16px;
-      z-index: 0;
-
-      > span {
-        color: #393939;
-        font-weight: 700;
-        font-size: 9px;
-      }
-    }
-
-    &--self {
-      .item-comments__commentMessage {
-        background-color: #00aeef;
-        color: #FFF;
-        border-top-right-radius: 0;
-      }
-
-      .item-comments__commentAuthor {
+  &--self {
+    .comment-posted {
+      &__header {
         text-align: right;
       }
-    }
 
-    &--attachment {
-      .item-comments__commentMessage {
-        min-height: 100px;
-        overflow: hidden;
-        cursor: pointer;
-        background-color: #F1F1F1;
-        color: #FFF;
+      &__message {
+        background-color: #00AEEF;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 0;
 
-        &::after {
-          content: '';
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          background: linear-gradient(to bottom, rgba(0,0,0,0.15) 0%,rgba(0,0,0,0.65) 100%);
-          border-radius: 0 10px 10px 10px;
-          transition: all .3s ease-in-out;
-          z-index: 0;
+        p {
+          color: #FFF;
         }
-
-        &:hover {
-          &::after  {
-            opacity: 0;
-          }
-
-          .item-comments__commentAttachmentCover {
-            transform: scale(1);
-          }
-
-          .item-comments__commentAttachmentCaption {
-            opacity: 0;
-          }
-        }
-      }
-
-      .item-comments__commentAttachmentCover {
-        background-position: center;
-        background-size: 100%;
-        background-repeat: no-repeat;
-        cursor: pointer;
-        transition: all 5s ease-in-out;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        transform: scale(1.2);
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
-      }
-
-      .item-comments__commentAttachmentCaption {
-          position: absolute;
-          bottom: 6px;
-          transition: all .5s ease-in-out;
-          z-index: 1;
-          max-height: 60px;
-          overflow: hidden;
-          display: -webkit-box;
-          -webkit-line-clamp: 3;
-          -webkit-box-orient: vertical;
       }
     }
   }
