--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -9,25 +9,64 @@
 <!-- ALL FOR STICKY -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.stickytableheaders.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.sticky.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
 
-<!-- PLUGINS -->
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
 
-<!-- COMPONENTS -->
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSimpleSelect.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
 
-<!-- OLD COMPONENTS -->
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
+{% if page.title == 'New App' %}
+  <!-- Sticky scroll -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
 
-<!-- APP -->
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/app.js"></script>
+  <!-- expand-collapse -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
+
+  <!-- toggle panels -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
+
+  <!-- tabs -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
+  <!-- breadcrumb -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
+
+  <!-- filters -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
+
+
+  <!-- selector -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
+  <!-- new multiselect -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
+  <!-- new simpleselect -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSimpleSelect.js"></script>
+  <!-- colorpicker -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
+
+{% endif %}
+
+{% if page.title == 'Old App' %}
+  <!-- expand-collapse -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
+
+  <!-- toggle panels -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
+
+  <!-- tabs -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
+
+  <!-- selector -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
+  <!-- new multiselect -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
+  <!-- new simpleselect -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSimpleSelect.js"></script>
+
+  <!-- OLD COMPONENTS -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
+{% endif %}
+
+{% if page.title == 'Old App' %}
+
+{% endif %}
