added foot for itembox

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -15,23 +15,17 @@
 {% if page.title == 'New App' %}
   <!-- Sticky scroll -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
-
   <!-- expand-collapse -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
-
   <!-- toggle panels -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
-
   <!-- tabs -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
   <!-- breadcrumb -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
-
   <!-- filters -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
-
-
   <!-- selector -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
   <!-- new multiselect -->
@@ -60,13 +54,23 @@
   <!-- new multiselect -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-  <!-- new simpleselect -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSimpleSelect.js"></script>
 
   <!-- OLD COMPONENTS -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
 {% endif %}
 
-{% if page.title == 'Old App' %}
+{% if page.title == 'Itembox' %}
+  <!-- expand-collapse -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
 
+  <!-- selector -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
+
+  <!-- new multiselect -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
+
+  <!-- filters -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
 {% endif %}
