--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -74,6 +74,7 @@
   <!-- filters -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
 {% endif %}
+
 {% if page.title == 'Components' %}
   <!-- expand-collapse -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
@@ -90,4 +91,39 @@
 
   <!-- filters -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
+{% endif %}
+
+{% if page.title == 'Popups' %}
+  <!-- expand-collapse -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
+
+  <!-- selector -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
+
+  <!-- new multiselect -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
+
+  <!-- filters -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
+{% endif %}
+
+{% if page.title == 'Tag-picker' %}
+  <!-- expand-collapse -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
+
+  <!-- selector -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
+
+  <!-- new multiselect -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
+
+  <!-- filters -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
+
+  <!-- colorpicker -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
 {% endif %}
