--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -1,30 +1,15 @@
 <div class="multiSelector multiSelector--popup multiSelector--semsearch JS_semsearch-1">
-  <div class="itemBox">
-    <div class="itemBoxFilter">
-      <div class="itemBoxFilter__input">
-        <input type="text" placeholder="filter through items">
-      </div>
+  <div class="multiSelector__box">
+    <div class="multiSelector__search">
+      <input type="search" class="multiSelector__searchInput js_multiSelector__filterInput" placeholder="search through items">
     </div>
+  </div>
+  <!-- /.multiSelector__box -->
 
-    <div class="itemBoxTable">
-        <div class="itemBoxBody">
-          <ul class="itemBoxTable__bodyRow">
-              <li class="itemBoxTable__bodyCell js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner">
-
-                    <div class="pmx-selector pmx-selector--readonly">
-                      <div class="pmx-selector__item">
-                        <div class="pmx-selector__block ">
-                          <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Any</span>
-                          <span class="pmx-selector__blockSeperator">•</span>
-                          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Typed keyword</span>
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
-              </li>
-          </ul>
+  <div class="multiSelector__box">
+    <div class="itemBox">
+      <div class="itemBoxTable">
+          <div class="itemBoxBody">
             <ul class="itemBoxTable__bodyRow">
                 <li class="itemBoxTable__bodyCell js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
                     <div class="itemBoxTable__bodyCellInner">
@@ -32,9 +17,9 @@
                       <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">title</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Any</span>
                             <span class="pmx-selector__blockSeperator">•</span>
-                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
+                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Typed keyword</span>
                           </div>
                         </div>
                       </div>
@@ -42,44 +27,60 @@
                     </div>
                 </li>
             </ul>
-            <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell  js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
-                    <div class="itemBoxTable__bodyCellInner">
+              <ul class="itemBoxTable__bodyRow">
+                  <li class="itemBoxTable__bodyCell js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+                      <div class="itemBoxTable__bodyCellInner">
 
-                      <div class="pmx-selector pmx-selector--readonly">
-                        <div class="pmx-selector__item">
-                          <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
-                            <span class="pmx-selector__blockSeperator">•</span>
-                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
+                        <div class="pmx-selector pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block ">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label">title</span>
+                              <span class="pmx-selector__blockSeperator">•</span>
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Enhance logon formula for listly</span>
+                            </div>
                           </div>
                         </div>
+
                       </div>
+                  </li>
+              </ul>
+              <ul class="itemBoxTable__bodyRow">
+                  <li class="itemBoxTable__bodyCell  js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+                      <div class="itemBoxTable__bodyCellInner">
 
-                    </div>
-                </li>
-            </ul>
-            <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell  js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
-                    <div class="itemBoxTable__bodyCellInner">
-
-                      <div class="pmx-selector pmx-selector--readonly">
-                        <div class="pmx-selector__item">
-                          <div class="pmx-selector__block ">
-                            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">-</span>
-                            <span class="pmx-selector__blockSeperator">•</span>
-                            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
-                            <span class="pmx-selector__blockSeperator">•</span>
-                            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dialog-wrapper</span>
+                        <div class="pmx-selector pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block ">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
+                              <span class="pmx-selector__blockSeperator">•</span>
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
+                            </div>
                           </div>
                         </div>
-                      </div>
 
-                    </div>
-                </li>
-            </ul>
-        </div>
+                      </div>
+                  </li>
+              </ul>
+              <ul class="itemBoxTable__bodyRow">
+                  <li class="itemBoxTable__bodyCell  js_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+                      <div class="itemBoxTable__bodyCellInner">
+
+                        <div class="pmx-selector pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block ">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
+                              <span class="pmx-selector__blockSeperator">•</span>
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--field">critical</span>
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
+                  </li>
+              </ul>
+          </div>
+      </div>
     </div>
+    <!-- /.itemBox -->
   </div>
-  <!-- /.itemBox -->
 </div>
