--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -52,6 +52,7 @@
       height: 100%;
       padding: 5px 40px 5px 15px;
       font-size: 16px;
+      color: #000;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
