--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -70,7 +70,7 @@
                             <div class="pmx-selector__block ">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
                               <span class="pmx-selector__blockSeperator">•</span>
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--field">critical</span>
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Critical</span>
                             </div>
                           </div>
                         </div>
